traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: reassignment to val
    a = estFaceMur()
      ^Snake:5: error: reassignment to val
    b = estFaceMur()
      ^